Update frontend text and simplify welcome message on server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="app">
-        <h1>Familienbaum</h1>
-        <button id="addPerson">Person hinzufügen</button>
+        <h1>Your Family Tree</h1>
+        <button id="addPerson">Add Person</button>
         <div id="tree"></div>
     </div>
     <script src="app.js"></script>
